# spectrum_analyzer

./: .gitignore  CMakeLists.txt  MainWindow.cpp  README.md  Source.cpp  spectrum_analyzer.sln  spectrum_analyzer.vcxproj
HW/: HW.sln
HW/Debug/: HW.ilk
HW/HW/: HW.cpp  HW.vcxproj  HW.vcxproj.filters
HW/HW/Debug/: HW.pch  vc141.idb
HW/HW/Debug/HW.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HW.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HelloWorld/: HelloWorld.sln  HelloWorld.vcxproj  Source.cpp
HelloWorld/Debug/: HelloWorld.ilk  vc141.idb
HelloWorld/Debug/HelloWorld.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HelloWorld.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PPP/: Ch2.txt  Ch3.txt  Ch4.txt  log.xls
Release/: spectrum_analyzer.iobj  spectrum_analyzer.ipdb
Release/spectrum.E8425578.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  spectrum_analyzer.lastbuildstate  spectrum_analyzer.write.1u.tlog
audio/: Source.cpp  audio.sln  audio.vcxproj
gtest/: test.cpp
include/: MainWindow.h
src/: CustomSlider.cpp  CustomSlider.h  FFTHandler.cpp  FFTHandler.h  Fl_AudioFile.cpp  Fl_AudioFile.h  IAudioFile.cpp  IAudioFile.h  IButton.h  IChart.h  IChoice.h  ICustomSlider.h  IFFTHandler.h  IFileChooser.h  ILevelMeter.h  IMenu.h  ISlider.h  ISpectrum.h  IWaveform.h  LevelMeter.cpp  LevelMeter.h  Main.cpp  MainWindow.cpp  MainWindow.h  Menu.cpp  Menu.h  MockFunctions.h  OpMenuButton.cpp  OpMenuButton.h  RAudioFile.cpp  RAudioFile.h  RButton.cpp  RButton.h  RChart.cpp  RChart.h  RChoice.cpp  RChoice.h  RFileChooser.cpp  RFileChooser.h  RSlider.cpp  (+6 more)
test/: AltTestStruct.h  AudioFileTest.h  AudioFileTesting.cpp  FileChooserMock.h  MainWindowTest.h  MainWindowTesting.cpp  MenuTest.h  MenuTesting.cpp  packages.config  test.cpp  test.sln  test.vcxproj
test/mock/: AudioFileMock.h  ButtonMock.h  ChartMock.h  ChoiceMock.h  CustomSliderMock.h  FFTHandlerMock.h  LevelMeterMock.h  MenuMock.h  SpectrumFormMock.h  WaveFormMock.h
